Many updates. Also worked on #43.

--- a/etc/after5.conf
+++ b/etc/after5.conf
@@ -1,12 +1,11 @@
-AFTER5_DOMAIN=after5detroit.com
-AFTER5_MODE="development"
-AFTER5_HOME_PATH="/path/to/after5"
-AFTER5_BACKUP_PATH="/backup"
-AFTER5_TEMP_PATH="/tmp"
-AFTER5_LOG_PATH="/var/log/after5"
-AFTER5_MAX_PHOTO_MB="10"
 
-### Mojolicious stuff...
+### After 5
+
+AFTER5_DOMAIN=after5detroit.com
+AFTER5_MODE=development
+AFTER5_TEMP_PATH=/tmp
+
+### Mojolicious
 
 MOJO_HOME=/Users/dstephenson/Projects/after5
 MOJO_MAX_MESSAGE_SIZE=100000000000
