I've started extending the functionality of the view configuration.

--- a/context.config
+++ b/context.config
@@ -1,36 +1,62 @@
-{ 
-    "name" : "Context Default Configuration File.",
-
-    "content" :
-    {
-        "views" :            
-        {
-            
-            "enabled" : ["articles", "photos", "videos", "shop"],
-            
-            "articles" :
-            {   
-                "name" : "Articles",
-                "description" : "A lengthy description of this view.",
-                "url"   : "/articles"
+{
+    "name": "Context Default Configuration File.",
+    "content": {
+        "views": {
+            "enabled": [
+                "articles",
+                "photos",
+                "videos",
+                "shop"
+            ],
+            "articles": {
+                "name": "Articles",
+                "description": "A lengthy description of this view.",
+                "url": "/articles",
+                "methods": [
+                    {
+                        "get": {
+                            "async": false,
+                            "request": "/path/to/script",
+                            "response": "/path/to/response.json"
+                        }
+                    },
+                    {
+                        "post": {
+                            "async": false,
+                            "request": "/path/to/script",
+                            "response": "/path/to/response.json"
+                        }
+                    },
+                    {
+                        "put": {
+                            "async": true,
+                            "request": "/path/to/script",
+                            "response": "/path/to/response.json"
+                        }
+                    },
+                    {
+                        "del": {
+                            "async": true,
+                            "request": "/path/to/script",
+                            "response": "/path/to/response.json"
+                        }
+                    }
+                ]
             },
-            "photos" :
-            {   
-                "name" : "Photos",
-                "description" : "A lengthy description of this view.",
-                "url"   : "/photos"
+            "photos": {
+                "name": "Photos",
+                "description": "A lengthy description of this view.",
+                "url": "/photos"
             },
-            "videos" :
-            {   
-                "name" : "Videos",
-                "description" : "A lengthy description of this view.",
-                "url"   : "/videos"
+            "videos": {
+                "name": "Videos",
+                "description": "A lengthy description of this view.",
+                "url": "/videos"
             },
-            "shop" :
-            {   
-                "name" : "Shop",
-                "description" : "A lengthy description of this view.",
-                "url"   : "/shop"            
+            "shop": {
+                "name": "Shop",
+                "description": "A lengthy description of this view.",
+                "url": "/shop"
             }
         }
     }
